`List` has no `getFirst` method, replacing it with `get(0)`